    private SSL key to root:postgres 0640 to prevent potential modification of
    the certificate by the postmaster. Closes: #341141
  * Add Czech debconf translations, thanks to Miroslav Kure. Closes: #341951
  * debian/postgresql-common.postinst: Check that the postgres user/group is
    not root; fail installation with a meaningful error message if it is.
    Closes: #340459

 -- Martin Pitt <mpitt@debian.org>  Tue,  6 Dec 2005 20:33:18 +0100

postgresql-common (36) unstable; urgency=low

  * pg_createcluster: Add --start-conf option to set start.conf value.
  * t/080_start.conf.t: Test --start-conf option.
  * debian/postgresql-common.config: Fix determination of latest version: Use
    highest supported version, not highest installed one.

 -- Martin Pitt <mpitt@debian.org>  Mon, 28 Nov 2005 23:23:18 +0100

postgresql-common (35) unstable; urgency=low

  * pg_ctlcluster: If the socket already responds, but connections fail
    several times in a row, give the postmaster some more time (5s) to
    actually accept connections.
  * t/060_obsolete_confparams.t: Start with a full configuration file for
    every tested version, instead of just upgrading the previously upgraded
    version. This gives an exhaustive check for obsolete parameters.
  * pg_upgradecluster: Handle all outstanding obsolete parameters when
    upgrading to 8.1:
    - bgwriter_percent -> bgwriter_{lru,all}_percent
    - bgwriter_maxpages -> bgwriter_{lru,all}_maxpages
  * PgCommon.pm: Add new function set_cluster_start_conf() for easier change
    of start.conf.
  * Rename test 030_create_errors.t to 030_errors.t since it covers more
    errors than just creation failures.
  * Add test t/080_start.conf.t: Check start.conf handling and upgrading.
  * debian/supported-versions: Add Debian release 3.1.
    Closes: #340397, #340483
  * debian/postgresql-common.config: Ignore things in /usr/lib/postgresql that
    are not a version-specific postgresql subdirectory. Closes: #340470